@@ -1,4 +1,4 @@
-rev_16-May_23-15_56
+rev_16-May_24-11_00
 
 28 Feb 2013
 Added support for interwiki links
@@ -889,3 +889,6 @@ Restored table.js to ckgedit version, from the CKEDitor 4.5.7 version
 
 23 May
 Fix in save.php for $conf[deaccent]==0 (off)
+
+24 May
+Captcha support added
